# b_thesis

./: .gitignore  Cargo.toml  README.md  a.dts  build.sh  build_dev.sh  build_dev_gdb.sh  build_rpi.sh  test_cfg.json  test_runner.py  todo.md
kernel/: Cargo.toml  build.rs  kernel-qemu.ld  kernel.ld  kernel_old.ld
kernel/src/: actor_test.rs  ep_actor.rs  exc_vec.rs  irq.rs  lib.rs  main.rs  mmu.rs  mmu_broken.rs  panic.rs  root_actor.rs  test.rs
kernel/src/actor/: mod.rs
kernel/src/actor/channel/: mod.rs  pt_channel_address.rs  pt_channel_receiver.rs  pt_channel_sender.rs  pt_message.rs  pt_message_channel.rs
kernel/src/actor/env/: mod.rs
kernel/src/actor/root/: actor_root_environment.rs  actor_root_environment_executor.rs  mod.rs
kernel/src/actor/runtime/: handler.rs
kernel/src/actor/user/: actor_isolation_address.rs  actor_user_environment.rs  actor_user_environment_executor.rs  actor_user_executor_event.rs  mod.rs  (+1 more)
kernel/src/asm/: boot.S  isr.S
kernel/src/boot/: allocator.rs  global.rs  mod.rs  primary.rs  secondary.rs
kernel/src/bsp/: mod.rs  rpi4b.rs
kernel/src/drivers/: gic400.rs  mmu.rs  mod.rs  pl011.rs  timer.rs  watchdog.rs
kernel/src/hal/: driver.rs  irq.rs  irq_driver.rs  mod.rs  serial.rs  timer.rs
kernel/src/isr/: context.rs  el.rs  irq_ctx.rs  irq_manager.rs  mod.rs  svc_ctx.rs
kernel/src/memory/: bitmap_stack_allocator.rs  mod.rs
kernel/src/services/: irq_manager.rs  logger.rs  mod.rs
kernel/src/user/: mod.rs  print.rs  test.rs
kernel/src/utils/: debug.rs  get_set.rs  mod.rs  print.rs  regs.rs  stack_buf.rs
(+111 files in other folders)
