[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = { version = "2.9" }
spin = { version = "0.10" }
zcene-core = { git = "https://github.com/Stazer/zcene.git", branch = "main" }
linked_list_allocator = { version = "0.10" }

[features]
default = ["board-rpi4b"]
board-rpi4b = []

[profile.dev]
opt-level = 0
panic = "abort"

[profile.release]
opt-level = 0
panic = "abort"

[build-dependencies]
cc = "*"