[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
bitflags = { version = "2.9" }
spin = { version = "0.10" }
zcene-core = { git = "https://github.com/Stazer/zcene.git", branch = "main" }
linked_list_allocator = { version = "0.10" }
paste = { version = "1" }
kernel-derive = {path = "../kernel-derive"}

[features]
default = ["board-rpi4b"]
board-rpi4b = []

[build-dependencies]
cc = "*"